# advent-of-code-2023-python

./: .gitignore  README.md  aoc_io.py  pyproject.toml  run.py  stats.md  utils.py
day_01/: analysis.md  solution.py
day_02/: analysis.md  solution.py
day_03/: analysis.md  solution.py
day_04/: analysis.md  solution.py
day_05/: analysis.md  solution.py
day_06/: analysis.md  solution.py
day_07/: analysis.md  solution.py
day_07/data/: part_1.py  part_2.py
day_08/: analysis.md  solution.py
day_09/: analysis.md  solution.py
day_10/: analysis.md  solution.py
day_11/: analysis.md  solution.py
day_12/: analysis.md  solution.py
day_13/: analysis.md  solution.py
day_14/: analysis.md  solution.py
day_15/: analysis.md  solution.py
day_16/: analysis.md  solution.py
day_17/: analysis.md  solution.py
day_xx/: analysis.md  solution.py
