[tool.poetry]
name = "advent-of-code-template"
version = "0.1.0"
description = "Template of my solutions to Advent of Code https://adventofcode.com/"
authors = ["Mushinako <8977737+Mushinako@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.2"
colorama = "^0.4.6"
matplotlib = "^3.8.2"
networkx = "^3.2.1"
requests = "^2.31.0"
pillow = "^10.1.0"
pyyaml = "^6.0.1"
tzdata = ">=2023.3"

[tool.poetry.group.dev.dependencies]
pip = ">=23.3.1"
setuptools = ">=69.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
